[package]
name = "string-inspector"
version = "0.0.1"
authors = ["Mat Moore <matmoore@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "A command line utility to inspect unicode strings."

[dependencies]
colored = "1.8"
terminal_size = "0.1.11"
encoding = "0.2"
clap = "~2.33"